--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  < <ion-navbar color="primary">
+  <ion-navbar color="primary">
   <button ion-button menuToggle>
     <ion-icon name="menu"></ion-icon>
   </button>
@@ -14,5 +14,36 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-card>
+    <ion-card-content>
+      <ion-card-title color="primary">
+        Location Information
+      </ion-card-title>
+      <address>
+        121, Clear Water Bay Road <br>
+        Clear Water Bay, Kowloon <br>
+        HONG KONG<br>
+      </address>
+      <p>
+        <ion-icon name="call"></ion-icon>: +852 1234 5678<br>
+        <ion-icon name="print"></ion-icon>: +852 8765 4321<br>
+        <ion-icon name="mail"></ion-icon>: confusion@food.net<br>
+      </p>
+    </ion-card-content>
+    <ion-row>
+      <ion-col>
+        <button ion-button icon-left clear small>
+          <ion-icon name="call"></ion-icon>
+          <div>Call</div>
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button icon-left clear small>
+          <ion-icon name="mail"></ion-icon>
+          EMAIL
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-card>
 
 </ion-content>
