--- a/src/pages/dishdetail/dishdetail.html
+++ b/src/pages/dishdetail/dishdetail.html
@@ -1,9 +1,13 @@
 <ion-header>
 
   <ion-navbar color="primary">
+    <ion-buttons end>
+      <button ion-button (click)="showActions()">
+        <ion-icon name="more" ></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>Dish Details</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
